[package]
name = "spark-matcher-worker"
version = "0.2.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing-subscriber = "0.3.19"
fuels = { version = "0.66.10", features = ["fuel-core-lib"] }
futures-util = "0.3"
tracing = "0.1.41"
schemars = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
spark-market-sdk = "0.6.5" 
thiserror = "1.0.63"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.24.0"
toml = "0.5"
url = "2.3.1"
uuid = { version = "1.0", features = ["v4"] }
